adding hypothesis testing exercises to github and updating my probability distribution exercises with refined responses

--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "48a4a1b3",
    "metadata": {},
    "outputs": [],
@@ -228,19 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "da35888f",
    "metadata": {},
    "outputs": [],
    "source": [
     "visits = 4326\n",
-    "clicks = 97\n",
+    "clicks = 96\n",
     "s_rate = .02"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "6322c122",
    "metadata": {},
    "outputs": [],
@@ -250,23 +250,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "f9fb3e25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.021942930454375544"
+       "0.13975823631416448"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "web_dist.pmf(clicks)"
+    "web_dist.sf(clicks)"
    ]
   },
   {
@@ -281,12 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "fb4192d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 100\n",
+    "n = 60\n",
     "p = .01\n",
     "\n",
     "stat_hw_dist = stats.binom(n,p)"
@@ -294,23 +294,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "bb2713e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.5471566423907614"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stat_hw_dist.cdf(60)"
+    "stat_hw_dist.cdf(0)"
    ]
   },
   {
@@ -323,78 +323,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "74fbb0b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "students = 59\n",
     "chance = .03\n",
+    "trials = round(.9*22*3)\n",
     "\n",
-    "cleaning_dist = stats.binom(students,chance)"
+    "cleaning_dist = stats.binom(trials,chance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "c45125c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.30250590303772024"
+       "0.8342199288437352"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaning_dist.pmf(1)"
+    "cleaning_dist.sf(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "59772e20",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.27131972746682126"
+       "0.027483031992576134"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaning_dist.pmf(2)"
+    "stats.binom(trials*2,chance).pmf(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "ce79367b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.02348574035753637"
+       "0.00012521651388091245"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaning_dist.pmf(5)"
+    "stats.binom(trials*5, chance).pmf(0)"
    ]
   },
   {
@@ -407,12 +408,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "8ff305a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "μ = (15*2)+10\n",
+    "μ = (15*2)\n",
     "σ = (3*2)\n",
     "\n",
     "panaderia_dist = stats.norm(μ,σ)"
@@ -420,23 +421,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "9e3eb845",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7976716190363569"
+       "0.6914624612740131"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "panaderia_dist.cdf(45)"
+    "panaderia_dist.cdf(33)"
    ]
   },
   {
@@ -456,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "id": "5d767985",
    "metadata": {},
    "outputs": [],
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 42,
    "id": "3d02671c",
    "metadata": {},
    "outputs": [],
@@ -478,13 +479,14 @@
     "query ='''\n",
     "SELECT\n",
     "*\n",
-    "FROM salaries;\n",
+    "FROM salaries\n",
+    "WHERE to_date > NOW()\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 43,
    "id": "2b6edac6",
    "metadata": {},
    "outputs": [
@@ -519,37 +521,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10001</td>\n",
-       "      <td>60117</td>\n",
-       "      <td>1986-06-26</td>\n",
-       "      <td>1987-06-26</td>\n",
+       "      <td>88958</td>\n",
+       "      <td>2002-06-22</td>\n",
+       "      <td>9999-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>62102</td>\n",
-       "      <td>1987-06-26</td>\n",
-       "      <td>1988-06-25</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>72527</td>\n",
+       "      <td>2001-08-02</td>\n",
+       "      <td>9999-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>66074</td>\n",
-       "      <td>1988-06-25</td>\n",
-       "      <td>1989-06-25</td>\n",
+       "      <td>10003</td>\n",
+       "      <td>43311</td>\n",
+       "      <td>2001-12-01</td>\n",
+       "      <td>9999-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>66596</td>\n",
-       "      <td>1989-06-25</td>\n",
-       "      <td>1990-06-25</td>\n",
+       "      <td>10004</td>\n",
+       "      <td>74057</td>\n",
+       "      <td>2001-11-27</td>\n",
+       "      <td>9999-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>66961</td>\n",
-       "      <td>1990-06-25</td>\n",
-       "      <td>1991-06-25</td>\n",
+       "      <td>10005</td>\n",
+       "      <td>94692</td>\n",
+       "      <td>2001-09-09</td>\n",
+       "      <td>9999-01-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -557,70 +559,70 @@
       ],
       "text/plain": [
        "   emp_no  salary   from_date     to_date\n",
-       "0   10001   60117  1986-06-26  1987-06-26\n",
-       "1   10001   62102  1987-06-26  1988-06-25\n",
-       "2   10001   66074  1988-06-25  1989-06-25\n",
-       "3   10001   66596  1989-06-25  1990-06-25\n",
-       "4   10001   66961  1990-06-25  1991-06-25"
+       "0   10001   88958  2002-06-22  9999-01-01\n",
+       "1   10002   72527  2001-08-02  9999-01-01\n",
+       "2   10003   43311  2001-12-01  9999-01-01\n",
+       "3   10004   74057  2001-11-27  9999-01-01\n",
+       "4   10005   94692  2001-09-09  9999-01-01"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salary = pd.read_sql(query, get_db_url)\n",
-    "salary.head()"
+    "salaries = pd.read_sql(query, get_db_url)\n",
+    "salaries.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 44,
    "id": "cd6bc9f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "63810.74"
+       "72012.24"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "avg_salary= round(salary.salary.mean(),2)\n",
+    "avg_salary= round(salaries.salary.mean(),2)\n",
     "avg_salary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "id": "f3cd9fd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16904.83"
+       "17310.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "std = round(salary.salary.std(),2)\n",
+    "std = round(salaries.salary.std(),2)\n",
     "std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "id": "59b03535",
    "metadata": {},
    "outputs": [],
@@ -630,101 +632,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "id": "ba3d9a0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4108250526452645"
+       "0.2438574078313278"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salary_dist.cdf(60_000)"
+    "salary_dist.cdf(60000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 48,
    "id": "591fd322",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03251942050035832"
+       "0.09208829007127312"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salary_dist.sf(95_000)"
+    "salary_dist.sf(95000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 49,
    "id": "0aca4ac9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.52804258, 0.83088558])"
+       "array([0.34270287, 0.67776336])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salary_dist.cdf([65_000,80_000])"
+    "salary_dist.cdf([65000,80000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "342fd81e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "83-53"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 50,
    "id": "e3707cea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "91616.71093849807"
+       "100484.65628252999"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
